<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.henrymeza.mascotasbasedato.ContactoActivity">

    <include
        android:id="@+id/miactionbar"
        layout="@layout/actionbar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"

        >
        <TextView
            android:id="@+id/tituloAContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloAContacto"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"

            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombreAContaco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreAContacto"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmailAContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailAContacto"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtComentarioAContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comentarioAContacto"
            />
        <Button
            android:id="@+id/btnEnviarAContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEnviarAContacto"
            android:onClick="btnEnviarAContacto_Click"
            />
    </LinearLayout>

</LinearLayout>
