<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acercade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.henrymeza.mascotasbasedato.AcercadeActivity">
    <include
        android:id="@+id/miactionbar"
        layout="@layout/actionbar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <ImageView
                android:id="@+id/logoApliacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cat_footprint_48"
                />
            <TextView
                android:id="@+id/nombreAplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/tamanio_textoTitulo"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/nombreVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"

            />
        <TextView
            android:id="@+id/nombreDesarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_desarrolladoPor"

            />
        <TextView
            android:id="@+id/fechaApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_fechacreacion"

            />
    </LinearLayout>
</LinearLayout>
